new Double > Double.valueOf ja new Integer > Integer.valueOf