@@ -55,26 +55,26 @@ public class BookEntryNode {
 		row[j++] = e.getName();
 		row[j++] = e.getCcy();
 
-		row[j++] = new Double(e.getMarketPrice() * e.getRate());
+		row[j++] = Double.valueOf(e.getMarketPrice() * e.getRate());
 		row[j++] = (e.getQuoteDate() != null) ? e.getQuoteDate() : "N/A";
 
-		row[j++] = new Integer((int) e.getAmount());
+		row[j++] = Integer.valueOf((int) e.getAmount());
 		// table[i][j++] = new Double(e.getCost());
 		// table[i][j++] = String.format("%1$.2f", e.getPrice());
-		row[j++] = new Double(e.getPriceOriginalCurrency()); // Show buy price
+		row[j++] = Double.valueOf(e.getPriceOriginalCurrency()); // Show buy price
 																// in original
 																// currency
 		row[j++] = e.getPurchaseDate();
 
-		row[j++] = new Double(e.getMarketPrice() * e.getRate() * e.getAmount());
-		row[j++] = new Double(e.getMarketPrice() * e.getAmount());
+		row[j++] = Double.valueOf(e.getMarketPrice() * e.getRate() * e.getAmount());
+		row[j++] = Double.valueOf(e.getMarketPrice() * e.getAmount());
 
-		row[j++] = new Double(e.getTaxCost());
-		row[j++] = new Double(e.getDividents());
-		row[j++] = new Double(e.getProfit(e.getMarketPrice()));
-		row[j++] = new Double(e.getProfitPercent(e.getMarketPrice()));
-		row[j++] = new Double(xirrAdapter.getXirr(e.getQuoteDate(), e));
-		row[j++] = new Double(0.0);
+		row[j++] = Double.valueOf(e.getTaxCost());
+		row[j++] = Double.valueOf(e.getDividents());
+		row[j++] = Double.valueOf(e.getProfit(e.getMarketPrice()));
+		row[j++] = Double.valueOf(e.getProfitPercent(e.getMarketPrice()));
+		row[j++] = Double.valueOf(xirrAdapter.getXirr(e.getQuoteDate(), e));
+		row[j++] = Double.valueOf(0.0);
 	}
 	
 	
